# VisionRobot

./: .gitignore  CMakeLists.txt  README.md  build.sh
calibration/: T_end2base.yml  affine_matrix.yml  calibration_points.txt  hand_eye_calibration copy.yml  hand_eye_calibration.yml
common/: xt_status.h  xt_struct.h  xt_utils.cc  xt_utils.h
images/2dof/: README.md
orbbec_test/: CMakeLists.txt
orbbec_test/coordinate_transform/: CMakeLists.txt  coordinate_transform.cc
orbbec_test/hw_align/: CMakeLists.txt
orbbec_test/sync_align/: sync_align.cc
vision_3dof/: CMakeLists.txt  main.cc
vision_3dof/calibration/: calibration.cc  calibration.h  readme.txt
vision_3dof/episode/: episode.cc  episode.h
vision_3dof/orbbec/: orbbec.cc  orbbec.h
vision_6dof/: CMakeLists.txt  main.cc
vision_6dof/calibration/: calibration.cc  calibration.h
vision_6dof/episode/: episode.cc  episode.h
vision_6dof/orbbec/: orbbec.cc  orbbec.h
vision_6dof/teach_mode/: teach_mode.cc  teach_mode.h
